fix & tweaks
